Reset application structure
